--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@slack/bolt": "^4.1.0",
     "googleapis": "^144.0.0",
     "cheerio": "^1.0.0",
-    "dotenv": "^16.4.0"
+    "dotenv": "^16.4.0",
+    "pdf-parse": "^1.1.1"
   },
   "engines": {
     "node": ">=20.0.0"
