--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "googleapis": "^144.0.0",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "adm-zip": "^0.5.16"
   },
   "engines": {
     "node": ">=20.0.0"
